--- a/zapit/app/views/layouts/usersession.html.erb
+++ b/zapit/app/views/layouts/usersession.html.erb
@@ -17,21 +17,9 @@
 
   <body>
 	<div class="container-fluid">
-		<div class="row header">
-			<div class="col-lg-2">
+		<div class="row">
+			<div class="col-lg-12" style="text-align:center">
 				<h1 class="logo"><a href="/">Zapit</a></h1>
-			</div>
-			
-			<div class="col-lg-3" style="margin-top:68px;">
-				<ul id="menuSession">
-					<li><a href="/user/login/">Login</a></li>
-					<li><a href="/user/register/">Register</a></li>
-					<li><a href="/user/logout/">Logout</a></li>
-				</ul>
-			</div>
-			
-			<div class="col-lg-4" style="margin-top:50px;">
-				<input type="text" class="textField" placeholder="search...">
 			</div>
 		</div>
 		
